--- a/FileRepositoryAPI/MailTemplates/RejectRepository.html
+++ b/FileRepositoryAPI/MailTemplates/RejectRepository.html
@@ -45,9 +45,11 @@
                                         <td valign=top style='padding:0cm 0cm 0cm 0cm'>
                                             <p class=MsoNormal>
                                                 <span style='font-family:"Arial","sans-serif";color:#666666'>
+                                                    <b>Following repository is rejected by @RejectedBy</b>
                                                     Repository Name : @RepositoryName <br />
                                                     Repository Description : @RepositoryDescr <br />
                                                     <br />
+
                                                 </span>
                                             </p>
                                         </td>
@@ -57,24 +59,7 @@
                                             <br /><br />
                                         </td>
                                     </tr>
-                                    <tr>
-                                        <td valign=top style='padding:7.5pt 0cm 15.0pt 0cm'>
-                                            <p class=MsoNormal>
-                                                <a id="btnAccept" href='@ApproveUrl' style='-webkit-appearance: button; -moz-appearance: button; appearance: button; text-decoration: none; background-color: Green; color: White; border: 2px; border-color: 2px; padding: 10px; font-weight: bold;'>
-                                                    Approve
-                                                </a>
-                                                &nbsp;
-                                                <a href='@RejectUrl' style='-webkit-appearance: button; -moz-appearance: button; appearance: button; text-decoration: none; background-color: Red; color: White; border: 2px; border-color: 2px; padding: 5px; font-weight: bold;'>
-                                                    Reject
-                                                </a>
-                                            </p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <br /><br />
-                                        </td>
-                                    </tr>
+                                    
                                     <tr>
                                         <td valign=top style='padding:0cm 0cm 0cm 0cm'>
                                             <p class=MsoNormal>
