Remove approve button, reject button if files not uploaded.

--- a/FileRepositoryAPI/MailTemplates/NotifiationMail.html
+++ b/FileRepositoryAPI/MailTemplates/NotifiationMail.html
@@ -59,7 +59,8 @@
                                     </tr>
                                     <tr>
                                         <td valign=top style='padding:7.5pt 0cm 15.0pt 0cm'>
-                                            <p class=MsoNormal>
+                                            @Buttons
+                                            <!--<p class=MsoNormal>
                                                 <a id="btnAccept" href='@ApproveUrl' style='-webkit-appearance: button; -moz-appearance: button; appearance: button; text-decoration: none; background-color: Green; color: White; border: 2px; border-color: 2px; padding: 10px; font-weight: bold;'>
                                                     Approve
                                                 </a>
@@ -67,7 +68,7 @@
                                                 <a href='@RejectUrl' style='-webkit-appearance: button; -moz-appearance: button; appearance: button; text-decoration: none; background-color: Red; color: White; border: 2px; border-color: 2px; padding: 5px; font-weight: bold;'>
                                                     Reject
                                                 </a>
-                                            </p>
+                                            </p>-->
                                         </td>
                                     </tr>
                                     <tr>
