Email Template changed

--- a/FileRepositoryAPI/Debug/MailTemplates/ExpiryNotifiationMail.html
+++ b/FileRepositoryAPI/Debug/MailTemplates/ExpiryNotifiationMail.html
@@ -35,7 +35,7 @@
                                             <p class=MsoNormal>
                                                 <b>
                                                     <span style='font-family:"Arial","sans-serif";color:#666666'>
-                                                        Hi @UserName,
+                                                        Hi @Name/@OwnerName,
                                                     </span>
                                                 </b>
                                             </p>
@@ -45,22 +45,30 @@
                                         <td valign=top style='padding:0cm 0cm 0cm 0cm'>
                                             <p class=MsoNormal>
                                                 <span style='font-family:"Arial","sans-serif";color:#666666'>
-                                                    <b>Following repository is rejected by @RejectedBy</b><br />
                                                     Repository Name : @RepositoryName <br />
                                                     Repository Description : @RepositoryDescr <br />
                                                     <br />
-
                                                 </span>
                                             </p>
+                                        </td>
+                                        
+                                    </tr>
+                                    <tr>
+                                        <td style='font-family:"Arial","sans-serif"; font-size:"medium"'>
+                                            Reminder: @Status
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="http://inpows0143/RepositoryApp/#/login">Click here to login</a>
                                             <br /><br />
                                         </td>
                                     </tr>
-                                    
+
+                                    <tr>
+                                        <td>
+                                            <br /><br />
+                                        </td>
+                                    </tr>
                                     <tr>
                                         <td valign=top style='padding:0cm 0cm 0cm 0cm'>
                                             <p class=MsoNormal>
