--- a/FileRepositoryAPI/Debug/MailTemplates/RejectRepository.html
+++ b/FileRepositoryAPI/Debug/MailTemplates/RejectRepository.html
@@ -46,6 +46,7 @@
                                             <p class=MsoNormal>
                                                 <span style='font-family:"Arial","sans-serif";color:#666666'>
                                                     <b>Following repository is rejected by @RejectedBy</b><br />
+                                                    Repository No : @RepositoryNo <br />
                                                     Repository Name : @RepositoryName <br />
                                                     Repository Description : @RepositoryDescr <br />
                                                     <br />
