--- a/FileRepositoryAPI/MailTemplates/FinalApproval.html
+++ b/FileRepositoryAPI/MailTemplates/FinalApproval.html
@@ -46,6 +46,7 @@
                                             <p class=MsoNormal>
                                                 <span style='font-family:"Arial","sans-serif";color:#666666'>
                                                     <b>Following are Approved Repository Details</b>
+                                                    Repository No : @RepositoryNo <br />
                                                     Repository Name : @RepositoryName <br />
                                                     Repository Description : @RepositoryDescr <br />
                                                     <br />
