--- a/FileRepositoryAPI/MailTemplates/NotifiationMail.html
+++ b/FileRepositoryAPI/MailTemplates/NotifiationMail.html
@@ -45,6 +45,7 @@
                                         <td valign=top style='padding:0cm 0cm 0cm 0cm'>
                                             <p class=MsoNormal>
                                                 <span style='font-family:"Arial","sans-serif";color:#666666'>
+                                                    Repository No : @RepositoryNo <br />
                                                     Repository Name : @RepositoryName <br />
                                                     Repository Description : @RepositoryDescr <br />
                                                     <br />
